@@ -1,4 +1,31 @@
 <table border=0>
+<tr>
+<td colspan=4 bgcolor=lightblue><b>2006-11-15</b>
+<tr bgcolor=lightgrey>
+<td>17:52
+<td>osborn
+<td>
+NEWS
+1.5<br>
+configure
+1.15<br>
+configure.ac
+1.16<br>
+examples/asqtad_test.c
+1.16<br>
+examples/test_common.c
+1.2<br>
+examples/wilson_invert_bench.c
+1.6<br>
+examples/wilson_test.c
+1.9<br>
+lib/asqtad_invert_p.c
+1.7<br>
+lib/wilson_invert_p.c
+1.10<br>
+<td>Fixed memory leak in asqtad inverter.
+</tr>
+
 <tr bgcolor=lightgreen>
 <td>23:02
 <td><td>
@@ -6,7 +33,7 @@
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-10-30</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:02
 <td>osborn
 <td>
@@ -35,7 +62,7 @@ Added gauge loading functions.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-09-26</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:23
 <td>osborn
 <td>
@@ -44,7 +71,7 @@ lib/Makefile.am
 <td>Fix Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:16
 <td>osborn
 <td>
@@ -53,7 +80,7 @@ examples/imp_gauge_force_bench.c
 <td>Changed FF to GF in output.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:12
 <td>osborn
 <td>
@@ -68,7 +95,7 @@ lib/symanzik_1loop_gauge_force_p.c
 <td>Really add files.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:09
 <td>osborn
 <td>
@@ -99,7 +126,7 @@ Added gauge force code.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-06-25</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>13:32
 <td>osborn
 <td>
@@ -151,7 +178,7 @@ Must use QLA &gt;= 1.6.0 now in order to agree with Chroma.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-05-04</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:12
 <td>osborn
 <td>
@@ -160,7 +187,7 @@ examples/test_common.h
 <td>Include qmp.h in examples.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:09
 <td>osborn
 <td>
@@ -181,7 +208,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-16</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>03:01
 <td>osborn
 <td>
@@ -202,7 +229,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-14</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:21
 <td>osborn
 <td>
@@ -219,7 +246,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-04</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:44
 <td>osborn
 <td>
@@ -232,7 +259,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-03-14</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:32
 <td>osborn
 <td>
@@ -243,7 +270,7 @@ configure.ac
 <td>Added CC, ect. to DISTCHECK_CONFIGURE_FLAGS.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:51
 <td>osborn
 <td>
@@ -252,7 +279,7 @@ include/Makefile.am
 <td>Added generic headers to Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:48
 <td>osborn
 <td>
@@ -269,7 +296,7 @@ examples/wilson_invert_bench.c
 <td>Allow selection of style in benchmarks.  Update version.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>00:54
 <td>osborn
 <td>
@@ -334,7 +361,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-09</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:05
 <td>osborn
 <td>
@@ -347,7 +374,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-03</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:23
 <td>osborn
 <td>
@@ -358,7 +385,7 @@ lib/wilson_invert_f.c
 <td>Added missing files.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:21
 <td>osborn
 <td>
@@ -398,7 +425,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-01-13</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:12
 <td>osborn
 <td>
@@ -407,7 +434,7 @@ lib/Makefile.am
 <td>Fixed lib Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:55
 <td>osborn
 <td>
@@ -452,7 +479,7 @@ lib/wilsonp.c
 <td>Moved many files around.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:50
 <td>osborn
 <td>
@@ -483,7 +510,7 @@ lib/common.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-29</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:17
 <td>osborn
 <td>
@@ -522,7 +549,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-16</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:47
 <td>osborn
 <td>
@@ -533,7 +560,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-15</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:23
 <td>osborn
 <td>
@@ -554,7 +581,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-12</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>06:16
 <td>osborn
 <td>
@@ -565,7 +592,7 @@ lib/wilsonp.c
 <td>Changed Wilson inverter code.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:41
 <td>osborn
 <td>
@@ -602,7 +629,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-08</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>01:03
 <td>osborn
 <td>
@@ -625,7 +652,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-01</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>02:02
 <td>osborn
 <td>
@@ -636,7 +663,7 @@ examples/asqtad_test.c
 <td>Small change in test, reran aotoreconf.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>01:51
 <td>osborn
 <td>
@@ -653,7 +680,7 @@ lib/asqtadp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-29</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:26
 <td>osborn
 <td>
@@ -664,7 +691,7 @@ include/qop.h
 <td>Fixed flop bug.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:58
 <td>osborn
 <td>
@@ -673,7 +700,7 @@ examples/asqtad_test.c
 <td>Small change to test program output.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:52
 <td>osborn
 <td>
@@ -688,7 +715,7 @@ lib/asqtadp.c
 <td>Added new style of dslash and optimization options.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:24
 <td>osborn
 <td>
@@ -699,7 +726,7 @@ lib/asqtadp.c
 <td>More changes to test program.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:34
 <td>osborn
 <td>
@@ -708,7 +735,7 @@ examples/asqtad_test.c
 <td>Changes in test program.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>17:36
 <td>osborn
 <td>
@@ -723,7 +750,7 @@ examples/asqtad_test.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-27</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>03:26
 <td>osborn
 <td>
