@@ -1,3 +1,10 @@
+2006-11-15 12:52  osborn
+
+	* NEWS, configure, configure.ac, examples/asqtad_test.c,
+	  examples/test_common.c, examples/wilson_invert_bench.c,
+	  examples/wilson_test.c, lib/asqtad_invert_p.c,
+	  lib/wilson_invert_p.c: Fixed memory leak in asqtad inverter.
+
 2006-10-30 18:02  tag qopqdp0-7-2
 
 2006-10-30 18:02  osborn
